--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+  <body class="page">
+    <header class="page-header">
+      <nav class="navigation">
+        <a href="#">
+          <img src="" alt="Логотип" class="logo">
+        </a>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a href="#">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a href="#">О седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a href="#">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-list user-menu">
+          <li class="navigation-item">
+            <a href="#">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a href="#">
+              <span class="visually-hidden">Избранное</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a href="#">Хочу сюда!</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
