--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body class="page">
     <header class="page-header">
-      <nav class="navigation">
+      <nav class="navigation main-menu">
         <a href="#">
           <img src="" alt="Логотип" class="logo">
         </a>
@@ -38,5 +38,14 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section>
+        <h2 class="visually-hidden">Добро пожаловать в великолепную Седону</h2>
+      </section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
   </body>
 </html>
