--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <nav class="navigation main-menu">
         <a href="#">
-          <img src="" alt="Логотип" class="logo">
+          <img src="" alt="Логотип сайта Седона" class="logo">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -32,20 +32,80 @@
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
-          <li class="navigation-item">
-            <a href="#">Хочу сюда!</a>
-          </li>
         </ul>
+        <button class="btn">Хочу сюда!</button>
       </nav>
     </header>
     <main>
+      <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
       <section>
-        <h2 class="visually-hidden">Добро пожаловать в великолепную Седону</h2>
+
       </section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section class="advantage">
+
+      </section>
+      <section class="servis">
+         <h2 class="visually-hidden">Сервис</h2>
+         <span>Приезжайте в Седону отдохнуть в комфорте и уюте!</span>
+         <p>Опытный персонал и качественное обслуживание!</p>
+         <ul class="servis-list">
+          <li class="servis-item">
+            <h3 class="title">Жильё</h3>
+            <p class="desc">Рекомендуем пожить в настоящем мотеле,всё как в кино!</p>
+          </li>
+          <li class="servis-item">
+            <h3 class="title">Еда</h3>
+            <p class="desc">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="servis-item">
+            <h3 class="title">Сувениры</h3>
+            <p class="desc">Не только китайского, но и настоящего местного производства!</p>
+          </li>
+         </ul>
+      </section>
+      <section>
+        <h2>Подбор гостиниц</h2>
+        <span>Заинтересовались?</span>
+        <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <button class="btn">Поиск гостиницы в седоне</button>
+      </section>
     </main>
+     <footer>
+      <article>
+        <h2>Получайте новости и акции</h2>
+        <span>Подпишитесь на рассылку</span>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="appointment-form" action="https://echo.htmlacademy.ru/" method="post">
+          <p>
+            <label for="email">Почта</label>
+            <input type="email" name="email" placeholder="Ваш e-mail"  id="email" required>
+          </p>
+          <button class="button" type="submit">Подписаться</button>
+        </form>
+      </article>
+      <ul class="social-list">
+        <li class="social-item">
+          <a href="https://vk.com/htmlacademy" class="social-link">
+            <span class="visually-hidden">Вконтакте</span>
+          </a>
+        </li>
+        <li class="social-item">
+          <a href="https://t.me/htmlacademy" class="social-link">
+            <span class="visually-hidden">Телеграм</span>
+          </a>
+        </li>
+        <li class="social-item">
+          <a href="https://www.youtube.com/user/htmlacademyru" class="social-link">
+            <span class="visually-hidden">Ютуб</span>
+          </a>
+        </li>
+      </ul>
+      <a href="#">
+        <span>+7 (812) 812-12-12</span>
+      </a>
+      <a href="https://htmlacademy.ru/">
+        <img src="" alt="Логотип сайта Седона" class="logo">
+      </a>
+     </footer>
   </body>
 </html>
