--- a/index.html
+++ b/index.html
@@ -42,7 +42,35 @@
 
       </section>
       <section class="advantage">
-
+        <h2 class="visually-hidden">Примущестува</h2>
+        <ul class="advantage-list">
+          <li class="advantage-item">
+            <div class="advantage-item__content">
+              <h3>Настоящий <br>городок</h3>
+              <p>Седона — не аттракцион для <br> туристов, там течёт своя <br> жизнь</p>
+            </div>
+            <img class="advantage-item__img" src="" alt="">
+          </li>
+          <li class="advantage-item">
+            <h3>Небольшая <br> площадь</h3>
+            <p>Все достопримечательности <br> находятся очень близко</p>
+          </li>
+          <li class="advantage-item">
+            <h3>Красивая <br> дорога</h3>
+            <p>Ехать в Седону из Лас-Вегаса <br> совсем не скучно!</p>
+          </li>
+          <li class="advantage-item">
+            <h3>Мало <br> туристов</h3>
+            <p>Большинство едет в Гранд <br> Каньон и толпится там</p>
+          </li>
+          <li class="advantage-item">
+            <img class="advantage-item__img" src="" alt="">
+            <div class="advantage-item__content">
+              <h3>Там есть <br> мост дьявола</h3>
+              <p>Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется</p>
+            </div>
+          </li>
+        </ul>
       </section>
       <section class="servis">
          <h2 class="visually-hidden">Сервис</h2>
@@ -64,7 +92,7 @@
          </ul>
       </section>
       <section>
-        <h2>Подбор гостиниц</h2>
+        <h2 class="visually-hidden">Подбор гостиниц</h2>
         <span>Заинтересовались?</span>
         <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <button class="btn">Поиск гостиницы в седоне</button>
@@ -72,7 +100,7 @@
     </main>
      <footer>
       <article>
-        <h2>Получайте новости и акции</h2>
+        <h2 class="visually-hidden">Получайте новости и акции</h2>
         <span>Подпишитесь на рассылку</span>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="appointment-form" action="https://echo.htmlacademy.ru/" method="post">
