--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
     </header>
     <main>
       <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
-      <section>
-
+      <section class="welcom-screen">
+        <h2 class="visually-hidden">Добро пожаловать в великолепную Седону</h2>
+        <img src="" alt="Добро пожаловать в великолепную Седону ">
       </section>
       <section class="advantage">
         <h2 class="visually-hidden">Примущестува</h2>
+        <span>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</span>
+        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantage-list">
           <li class="advantage-item">
             <div class="advantage-item__content">
@@ -128,9 +131,9 @@
           </a>
         </li>
       </ul>
-      <a href="#">
-        <span>+7 (812) 812-12-12</span>
-      </a>
+      <address>
+        <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      </address>
       <a href="https://htmlacademy.ru/">
         <img src="" alt="Логотип сайта Седона" class="logo">
       </a>
