--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
   <body class="page">
     <header class="page-header">
       <nav class="navigation main-menu">
-        <a href="#">
+        <a class="logo" href="#">
           <img src="" alt="Логотип сайта Седона" class="logo">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a href="#">Главная</a>
+            <a class="navigation-link navigation-link-active" href="#">Главная</a>
           </li>
           <li class="navigation-item">
-            <a href="#">О седоне</a>
+            <a class="navigation-link" href="#">О седоне</a>
           </li>
           <li class="navigation-item">
-            <a href="#">Гостиницы</a>
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="navigation-list user-menu">
           <li class="navigation-item">
-            <a href="#">
+            <a class="navigation-link" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
-            <a href="#">
+            <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
@@ -44,33 +44,33 @@
       </section>
       <section class="advantage">
         <h2 class="visually-hidden">Примущестува</h2>
-        <span>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</span>
-        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <span class="subtitle">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</span>
+        <p class="text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantage-list">
           <li class="advantage-item">
             <div class="advantage-item__content">
-              <h3>Настоящий <br>городок</h3>
-              <p>Седона — не аттракцион для <br> туристов, там течёт своя <br> жизнь</p>
+              <h3 class="advantage-title">Настоящий <br>городок</h3>
+              <p class="advantage-text">Седона — не аттракцион для <br> туристов, там течёт своя <br> жизнь</p>
             </div>
             <img class="advantage-item__img" src="" alt="">
           </li>
           <li class="advantage-item">
-            <h3>Небольшая <br> площадь</h3>
-            <p>Все достопримечательности <br> находятся очень близко</p>
+            <h3 class="advantage-title">Небольшая <br> площадь</h3>
+            <p class="advantage-text">Все достопримечательности <br> находятся очень близко</p>
           </li>
           <li class="advantage-item">
-            <h3>Красивая <br> дорога</h3>
-            <p>Ехать в Седону из Лас-Вегаса <br> совсем не скучно!</p>
+            <h3 class="advantage-title">Красивая <br> дорога</h3>
+            <p class="advantage-text">Ехать в Седону из Лас-Вегаса <br> совсем не скучно!</p>
           </li>
           <li class="advantage-item">
-            <h3>Мало <br> туристов</h3>
-            <p>Большинство едет в Гранд <br> Каньон и толпится там</p>
+            <h3 class="advantage-title">Мало <br> туристов</h3>
+            <p class="advantage-text">Большинство едет в Гранд <br> Каньон и толпится там</p>
           </li>
           <li class="advantage-item">
             <img class="advantage-item__img" src="" alt="">
             <div class="advantage-item__content">
-              <h3>Там есть <br> мост дьявола</h3>
-              <p>Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется</p>
+              <h3 class="advantage-title">Там есть <br> мост дьявола</h3>
+              <p class="text">Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется</p>
             </div>
           </li>
         </ul>
@@ -81,24 +81,24 @@
          <p>Опытный персонал и качественное обслуживание!</p>
          <ul class="servis-list">
           <li class="servis-item">
-            <h3 class="title">Жильё</h3>
-            <p class="desc">Рекомендуем пожить в настоящем мотеле,всё как в кино!</p>
+            <h3 class="servis-title">Жильё</h3>
+            <p class="servis-desc">Рекомендуем пожить в настоящем мотеле,всё как в кино!</p>
           </li>
           <li class="servis-item">
-            <h3 class="title">Еда</h3>
-            <p class="desc">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            <h3 class="servis-title">Еда</h3>
+            <p class="servis-desc">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="servis-item">
-            <h3 class="title">Сувениры</h3>
-            <p class="desc">Не только китайского, но и настоящего местного производства!</p>
+            <h3 class="servis-title">Сувениры</h3>
+            <p class="servis-desc">Не только китайского, но и настоящего местного производства!</p>
           </li>
          </ul>
       </section>
-      <section>
+      <section class="search">
         <h2 class="visually-hidden">Подбор гостиниц</h2>
-        <span>Заинтересовались?</span>
-        <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <button class="btn">Поиск гостиницы в седоне</button>
+        <span class="search-slogan">Заинтересовались?</span>
+        <p class="search-desc" >Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <button class="btn search-btn">Поиск гостиницы в седоне</button>
       </section>
     </main>
      <footer>
