--- a/catalog.html
+++ b/catalog.html
@@ -13,23 +13,23 @@
       </a>
       <ul class="navigation-list">
         <li class="navigation-item">
-          <a href="index.html">Главная</a>
+          <a  class="navigation-link" href="index.html">Главная</a>
         </li>
         <li class="navigation-item">
-          <a href="#">О седоне</a>
+          <a class="navigation-link" href="#">О седоне</a>
         </li>
         <li class="navigation-item">
-          <a href="#">Гостиницы</a>
+          <a class="navigation-link navigation-link-active" href="#">Гостиницы</a>
         </li>
       </ul>
       <ul class="navigation-list user-menu">
         <li class="navigation-item">
-          <a href="#">
+          <a class="navigation-link" href="#">
             <span class="visually-hidden">Поиск</span>
           </a>
         </li>
         <li class="navigation-item">
-          <a href="#">
+          <a class="navigation-link" href="#">
             <span class="visually-hidden">Избранное</span>
           </a>
         </li>
