--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <section class="search">
         <h2 class="visually-hidden">Подбор гостиниц</h2>
         <span class="search-slogan">Заинтересовались?</span>
-        <p class="search-desc" >Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p class="search-text" >Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <button class="btn search-btn">Поиск гостиницы в седоне</button>
       </section>
     </main>
