--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,70 @@
     </nav>
   </header>
   <main>
-
+    <header class="catalog-header">
+      <h1>Гостиницы Седоны</h1>
+      <ol class="breadcrumbs">
+        <li class="breadcrumbs-item">
+          <a class="breadcrumbs-link" href="index.html"><span class="visually-hidden">Главная</span></a>
+        </li>
+        <li class="breadcrumbs-item">
+          <a class="breadcrumbs-link">Гостиницы</a>
+        </li>
+      </ol>
+      <form  class="search-form" action="">
+        <fieldset class="search-filter-group">
+          <legend class="search-filter-title">Инфраструктура:</legend>
+          <ul>
+            <li>
+              <label class="control">
+                <input class="control-input" type="checkbox">
+                Бассейн
+              </label>
+            </li>
+            <li>
+              <label class="control">
+                <input class="control-input" type="checkbox">
+                Парковка
+              </label>
+            </li>
+            <li>
+              <label class="control">
+                <input class="control-input" type="checkbox">
+                Wi-Fi
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset class="search-filter-group">
+          <legend class="search-filter-title">Тип жилья:</legend>
+          <ul>
+            <li>
+              <label class="control">
+                <input class="control-input" type="checkbox">
+                Гостиница
+              </label>
+            </li>
+            <li>
+              <label class="control">
+                <input class="control-input" type="checkbox">
+                Мотель
+              </label>
+            </li>
+            <li>
+              <label class="control">
+                <input class="control-input" type="checkbox">
+                Апартаменты
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset class="search-filter-group">
+          <legend class="search-filter-title">Стоимость, ₽:</legend>
+        </fieldset>
+        <button class="button" type="submit">Применить</button>
+        <button class="button" type="submit">Сбросить</button>
+      </form>
+    </header>
   </main>
   <footer>
     <article>
