--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Хочу сюда</span>
+            </a>
+          </li>
         </ul>
-        <button class="btn">Хочу сюда!</button>
       </nav>
     </header>
     <main>
@@ -97,7 +101,7 @@
       <section class="search">
         <h2 class="visually-hidden">Подбор гостиниц</h2>
         <span class="search-slogan">Заинтересовались?</span>
-        <p class="search-text" >Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p class="search-text" >Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения https://github.com/satros1123/2481321-sedona-39гостиниц в Седоне</p>
         <button class="btn search-btn">Поиск гостиницы в седоне</button>
       </section>
     </main>
