--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   </head>
   <body class="page">
     <header class="page-header">
+      <a class="logo" href="#">
+        <img src="" alt="Логотип сайта Седона" class="logo">
+      </a>
       <nav class="navigation main-menu">
-        <a class="logo" href="#">
-          <img src="" alt="Логотип сайта Седона" class="logo">
-        </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link navigation-link-active" href="#">Главная</a>
@@ -32,12 +32,10 @@
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">Хочу сюда!</span>
-            </a>
-          </li>
         </ul>
+        <a class="navigation-link" href="#">
+          <span class="visually-hidden">Хочу сюда!</span>
+        </a>
       </nav>
     </header>
     <main>
@@ -48,7 +46,7 @@
       </section>
       <section class="advantage">
         <h2 class="visually-hidden">Примущестува</h2>
-        <span class="subtitle">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</span>
+        <p class="subtitle">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
         <p class="text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantage-list">
           <li class="advantage-item">
@@ -81,7 +79,7 @@
       </section>
       <section class="servis">
          <h2 class="visually-hidden">Сервис</h2>
-         <span>Приезжайте в Седону отдохнуть в комфорте и уюте!</span>
+         <p>Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
          <p>Опытный персонал и качественное обслуживание!</p>
          <ul class="servis-list">
           <li class="servis-item">
@@ -100,15 +98,14 @@
       </section>
       <section class="search">
         <h2 class="visually-hidden">Подбор гостиниц</h2>
-        <span class="search-slogan">Заинтересовались?</span>
+        <p class="search-slogan">Заинтересовались?</p>
         <p class="search-text" >Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <button class="btn search-btn">Поиск гостиницы в седоне</button>
       </section>
     </main>
      <footer>
       <article>
-        <h2 class="visually-hidden">Получайте новости и акции</h2>
-        <span>Подпишитесь на рассылку</span>
+        <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="appointment-form" action="https://echo.htmlacademy.ru/" method="post">
           <p>
